--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "email": "hrasekj@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "vesion": "dev-master",
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "^2.0"
